# openGL

./: .gitignore  CMakeSettings.json  README.md
code/: CMakeLists.txt
code/src/Fedor/: bmp.cpp  formats.h  main.cpp
code/src/Graphics/: main.cpp
code/src/Sasha/: data.h  headers.h
code/src/Tonya/: data.h  functions.h  main.cpp  shadows.cpp
samples/: OpenGL Tutorial 2009.7z
samples/Common/: FPSCounter.cpp  FPSCounter.h  Timer.cpp  Timer.h  torus.cpp  torus.h
samples/CubeMaps/CubeMap1/: CubeMap1.cpp  CubeTexture.cpp  CubeTexture.h
samples/CubeMaps/CubeMap2/: CubeMap2.cpp
samples/CubeMaps/CubeMap3/: CubeMap3.cpp
samples/CubeMaps/CubeMap4/: CubeMap4.cpp  CubeTexture.cpp  CubeTexture.h
samples/Demos/: TextureMatrix.cpp  fractal.raw
samples/Nurbs_2006/: Nurbs.ppt
samples/Nurbs_2006/BezierDemo/: BSpline.cs  BezierCurve.cs  BezierDemo.csproj  BezierDemo.sln  BezierDisplay.cs  MainForm.cs  MainForm.resx  PointEditor.cs  PointEditor.resx  Range.cs  RectangleD.cs  Vector.cs  Viewport2d.cs
samples/Nurbs_2006/Common/: BSpline.h
samples/Nurbs_2006/Cube/: Cube.cpp
samples/Nurbs_2006/Revolution/: Revolution.cpp
samples/Nurbs_2006/RevolutionNurbs/: RevolutionNurbs.cpp
samples/Nurbs_2006/Surface/: Surface.cpp
samples/Nurbs_2006/Surface2/: Surface2.cpp
samples/Nurbs_2006/Sweep/: Sweep.cpp
samples/OpenGL Blending and Transparency/Cube1/: Cube1.cpp
samples/OpenGL Blending and Transparency/Cube2/: BmpLoad.cpp  BmpLoad.h  Cube2.cpp
samples/OpenGL Blending and Transparency/Cube3/: Cube3.cpp
samples/OpenGL Blending and Transparency/Lightmap/: Lightmap.cpp
samples/OpenGL Blending and Transparency/MultiTexture/: MultiTexture.cpp
samples/OpenGL Blending and Transparency/Torus1/: Torus1.cpp
samples/OpenGL Blending and Transparency/Torus2/: Torus2.cpp
samples/OpenGL Intro/sources/: Cube1.cpp  Cube2.cpp  Cube3.cpp  Cube4.cpp  Cube5.cpp  Cube6.cpp  Cube7.cpp  Simple.cpp
samples/Reflection/: Reflection.cpp
samples/Shadows In OpenGL/: shadow-map.cpp
samples/trees/: Thumbs.db
src/Fedor/: data.h  functions.h
src/Graphics/: formats.h  func.h
src/Sasha/: bmp.cpp  bmp.h  ext.h  main.cpp
src/Tonya/: bmp.cpp
(+24 files in other folders)
